cli/tests/snapshots/cli__run_tests@check_todo_panic_stackoverflow.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: tests/inputs/check_todo_panic_stackoverflow.gleam
---
STDOUT
Running tests...
Error at tests/inputs/check_todo_panic_stackoverflow.gleam (f:5)
  `todo` expression evaluated. This code has not yet been implemented.
Error at tests/inputs/check_todo_panic_stackoverflow.gleam (f:6)
  not implemented
Error at tests/inputs/check_todo_panic_stackoverflow.gleam (f:7)
  `panic` expression evaluated.
Error at tests/inputs/check_todo_panic_stackoverflow.gleam (f:8)
  invalid input
Error at tests/inputs/check_todo_panic_stackoverflow.gleam (f_examples:19)
  Maximum call stack size exceeded
6 tests, 1 success(es), 0 failure(s) and 5 error(s).

STDERR
warning: Todo found
  ┌─ /src/tests/inputs/check_todo_panic_stackoverflow.gleam:5:10
  │
5 │     0 -> todo
  │          ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.

Hint: I think its type is `Int`.


warning: Todo found
  ┌─ /src/tests/inputs/check_todo_panic_stackoverflow.gleam:6:10
  │
6 │     1 -> todo as "not implemented"
  │          ^^^^^^^^^^^^^^^^^^^^^^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.

Hint: I think its type is `Int`.
